Teste de unidades disponíveis de livros finalizada